--- a/incio.html
+++ b/incio.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta http-equiv="content-language" content="es" />
     <link
-      href="https://static.tacdn.com/css2/webfonts/TripSans/TripSans-VF.woff2?v1.002"
+      href="imgs/logotipo.jpg"
       rel="preload"
       as="font"
       type="font/woff2"
@@ -13,64 +13,16 @@
     <link
       rel="icon"
       id="favicon"
-      href="https://static.tacdn.com/favicon.ico?v2"
+      href="imgs/logotipo.jpg"
       type="image/x-icon"
     />
     <link
       rel="mask-icon"
       sizes="any"
-      href="https://static.tacdn.com/img2/brand_refresh/application_icons/mask-icon.svg"
+      href="imgs/logotipo.jpg"
       color="#000000"
     />
-    <meta name="theme-color" content="#34e0a1" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta property="al:ios:app_name" content="TripAdvisor" />
-    <meta property="al:ios:app_store_id" content="284876795" />
-    <meta
-      property="twitter:app:id:ipad"
-      name="twitter:app:id:ipad"
-      content="284876795"
-    />
-    <meta
-      property="twitter:app:id:iphone"
-      name="twitter:app:id:iphone"
-      content="284876795"
-    />    
-    <script type="application/ld+json">
-      [
-        {
-          "@context": "http:\u002F\u002Fschema.org",
-          "@type": "Organization",
-          "name": "Tripadvisor",
-          "url": "https:\u002F\u002Fwww.tripadvisor.es\u002F",
-          "logo": "https:\u002F\u002Fstatic.tacdn.com\u002Fimg2\u002Fbrand_refresh\u002FTripadvisor_logoset_solid_green.svg",
-          "sameAs": [
-            "https:\u002F\u002Fwww.facebook.com\u002FTripadvisor",
-            "https:\u002F\u002Ftwitter.com\u002FTripadvisor",
-            "https:\u002F\u002Finstagram.com\u002Ftripadvisor\u002F",
-            "https:\u002F\u002Fwww.linkedin.com\u002Fcompany\u002Ftripadvisor"
-          ]
-        },
-        {
-          "@context": "http:\u002F\u002Fschema.org",
-          "@type": "WebSite",
-          "name": "Tripadvisor",
-          "url": "https:\u002F\u002Fwww.tripadvisor.es\u002F",
-          "potentialAction": {
-            "@type": "SearchAction",
-            "target": {
-              "@type": "EntryPoint",
-              "urlTemplate": "https:\u002F\u002Fwww.tripadvisor.es\u002FSearch?q={search_term_string}"
-            },
-            "query-input": "required name=search_term_string"
-          }
-        }
-      ]
-    </script>    
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
+    
     <script>
       window.performance &&
         performance.mark &&
@@ -99,316 +51,7 @@
     <title>
       The Olive Land Farm - Familia desde 2022
     </title>
-    <meta name="description" />
-    <meta name="robots" content="max-image-preview:large" />
-    <!-- <link
-      rel="canonical"
-      href="https://www.tripadvisor.es/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="en"
-      href="https://www.tripadvisor.com/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="en-GB"
-      href="https://www.tripadvisor.co.uk/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="en-CA"
-      href="https://www.tripadvisor.ca/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="fr-CA"
-      href="https://fr.tripadvisor.ca/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="it"
-      href="https://www.tripadvisor.it/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="es"
-      href="https://www.tripadvisor.es/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="de"
-      href="https://www.tripadvisor.de/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="fr"
-      href="https://www.tripadvisor.fr/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="ja"
-      href="https://www.tripadvisor.jp/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="zh-Hans"
-      href="https://cn.tripadvisor.com/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="en-IN"
-      href="https://www.tripadvisor.in/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="sv"
-      href="https://www.tripadvisor.se/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="nl"
-      href="https://www.tripadvisor.nl/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="pt"
-      href="https://www.tripadvisor.com.br/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="tr"
-      href="https://www.tripadvisor.com.tr/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="da"
-      href="https://www.tripadvisor.dk/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="es-MX"
-      href="https://www.tripadvisor.com.mx/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="en-IE"
-      href="https://www.tripadvisor.ie/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="ar"
-      href="https://ar.tripadvisor.com/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="ar-EG"
-      href="https://www.tripadvisor.com.eg/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="de-AT"
-      href="https://www.tripadvisor.at/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="el"
-      href="https://www.tripadvisor.com.gr/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="en-AU"
-      href="https://www.tripadvisor.com.au/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="en-MY"
-      href="https://www.tripadvisor.com.my/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="en-NZ"
-      href="https://www.tripadvisor.co.nz/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="en-PH"
-      href="https://www.tripadvisor.com.ph/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="en-SG"
-      href="https://www.tripadvisor.com.sg/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="en-ZA"
-      href="https://www.tripadvisor.co.za/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="es-AR"
-      href="https://www.tripadvisor.com.ar/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="es-CL"
-      href="https://www.tripadvisor.cl/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="es-CO"
-      href="https://www.tripadvisor.co/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="es-PE"
-      href="https://www.tripadvisor.com.pe/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="es-VE"
-      href="https://www.tripadvisor.com.ve/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="id"
-      href="https://www.tripadvisor.co.id/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="he"
-      href="https://www.tripadvisor.co.il/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="ko"
-      href="https://www.tripadvisor.co.kr/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="nb"
-      href="https://no.tripadvisor.com/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="pt-PT"
-      href="https://www.tripadvisor.pt/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="ru"
-      href="https://www.tripadvisor.ru/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="th"
-      href="https://th.tripadvisor.com/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="vi"
-      href="https://www.tripadvisor.com.vn/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="zh-Hant"
-      href="https://www.tripadvisor.com.tw/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="de-CH"
-      href="https://www.tripadvisor.ch/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="fr-CH"
-      href="https://fr.tripadvisor.ch/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="it-CH"
-      href="https://it.tripadvisor.ch/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="en-HK"
-      href="https://en.tripadvisor.com.hk/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="fr-BE"
-      href="https://fr.tripadvisor.be/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="nl-BE"
-      href="https://www.tripadvisor.be/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <link
-      rel="alternate"
-      hreflang="zh-hk"
-      href="https://www.tripadvisor.com.hk/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    />
-    <meta
-      property="og:url"
-      content="https://www.tripadvisor.es/Attraction_Review-g1064253-d15509475-Reviews-Centro_Ecologico_Cultural_Los_Olivos-Telde_Gran_Canaria_Canary_Islands.html"
-    /> -->
-    <meta property="og:site_name" content="The Olive Land Farm" />
-    <meta property="og:type" content="website" />
-    <meta property="og:locale" content="es-ES" />
-    <meta
-      property="og:title"
-      content="The Olive Land Farm - Familia desde 2022"
-    />
     
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="1200" />
-    <link
-      rel="stylesheet"
-      href="https://static.tacdn.com/assets/cjerkd.EeCumrN.css"
-      crossorigin=""
-    />
-    <link
-      rel="stylesheet"
-      href="https://static.tacdn.com/assets/4cph9f.vrIX9ki.css"
-      crossorigin=""
-    />
-    <link
-      rel="stylesheet"
-      href="https://static.tacdn.com/assets/p7jq7m.4alUJPv.css"
-      crossorigin=""
-    />
-    <script
-      src="https://static.tacdn.com/assets/qm1ubp.zzFMSqS.js"
-      async=""
-      crossorigin=""
-    ></script>
-    <script
-      src="https://static.tacdn.com/assets/cjerkd.EeCumrN.js"
-      async=""
-      crossorigin=""
-    ></script>
-    <script
-      src="https://static.tacdn.com/assets/4cph9f.vrIX9ki.js"
-      async=""
-      crossorigin=""
-    ></script>
-    <script
-      src="https://static.tacdn.com/assets/nicnt2.0MlJ6DX.js"
-      async=""
-      crossorigin=""
-    ></script>
-    <script
-      src="https://static.tacdn.com/assets/p7jq7m.4alUJPv.js"
-      async=""
-      crossorigin=""
-    ></script>
-    <script
-      src="https://static.tacdn.com/assets/da2czs.qqlOfn3.js"
-      async=""
-      crossorigin=""
-    ></script>
   </head>
   <body>
     <div id="lithium-root">
