--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </script>
     <link
       rel="stylesheet"
-      href="https://static.tacdn.com/assets/9dm544wogg8j-c.css"
+      href="https://perras.static.tacdn.com/assets/9dm544wogg8j-c.css"
       crossorigin=""
     />
     
