--- a/1.html
+++ b/1.html
@@ -1,96 +1,161 @@
 <!doctype html>
 <html><!-- InstanceBegin template="/Templates/olivplantilla.dwt" codeOutsideHTMLIsLocked="false" -->
+
 <head>
-<meta charset="utf-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Olive Land Farms</title>
-<!-- InstanceEndEditable -->
-<!-- InstanceBeginEditable name="head" -->
-<!-- InstanceEndEditable -->
-<link href="utls/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="utls/css/carousel.css">
-<link href="utls/css/mycss.css" rel="stylesheet" type="text/css">
+  <meta charset="utf-8">
+  <!-- InstanceBeginEditable name="doctitle" -->
+  <title>Olive Land Farms</title>
+  <!-- InstanceEndEditable -->
+  <!-- InstanceBeginEditable name="head" -->
+  <!-- InstanceEndEditable -->
+  <link href="utls/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="utls/css/carousel.css">
+  <link href="utls/css/mycss.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<div class="container">
-<!-- inicio .header -->
-  <div class="header">
-   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="bd-placeholder-img" width="100%" height="100%"  aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false" src="utls/imgs/IMG-20231015-WA0039.jpg"><rect width="100%" height="100%" /></img>
-        <div class="container">
-          <div class="carousel-caption text-start">
-            <h1>Villa de historia.</h1>
-            <p>Lugar para disfrutar de una vista en casa tradicional.</p>            
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="bd-placeholder-img" width="100%" height="100%" src="utls/imgs/IMG-20230820-WA0042.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" /></img>
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Cuidando de lo principal.</h1>
-            <p>Nos distinguen los Olivos. Su cuidado y preservacion nos importa.</p>           
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="bd-placeholder-img" width="100%" height="100%" src="utls/imgs/IMG-20231206-WA0022.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" /></img>
-        <div class="container">
-          <div class="carousel-caption text-end">
-            <h1>El ganado cumple su rol.</h1>
-            <p>Some representative placeholder content for the third slide of this carousel.</p>            
-          </div>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-  </div>  <!-- fin .header carousel -->
-  <!-- inicio header menu-->
   <div class="container">
-    <header class="d-flex flex-wrap justify-content-center py-3 border-bottom">
-      <ul class="nav nav-pills" id="menuarriba">
-        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Inicio</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-      </ul>
+    <!-- inicio .header -->
+    <div class="header">
+      <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true"
+            aria-label="Slide 0"></button>
+          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="bd-placeholder-img" width="100%" height="100%" aria-hidden="true"
+              preserveAspectRatio="xMidYMid slice" focusable="false" src="utls/imgs/IMG-20231015-WA0039.jpg">
+            <rect width="100%" height="100%" /></img>
+            <div class="container">
+              <div class="carousel-caption text-start">
+                <h1>Villa de historia.</h1>
+                <p>Lugar para disfrutar de una vista en casa tradicional.</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="bd-placeholder-img" width="100%" height="100%" src="utls/imgs/IMG-20230820-WA0042.jpg"
+              aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <rect width="100%" height="100%" /></img>
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>Cuidando de lo principal.</h1>
+                <p>Nos distinguen los Olivos. Su cuidado y preservacion nos importa.</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="bd-placeholder-img" width="100%" height="100%" src="utls/imgs/IMG-20231206-WA0022.jpg"
+              aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <rect width="100%" height="100%" /></img>
+            <div class="container">
+              <div class="carousel-caption text-end">
+                <h1>El ganado cumple su rol.</h1>
+                <p>Some representative placeholder content for the third slide of this carousel.</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="bd-placeholder-img" width="100%" height="100%" src="utls/imgs/logotipo.jpg" aria-hidden="true"
+              preserveAspectRatio="xMidYMid slice" focusable="false">
+            <rect width="100%" height="100%" /></img>
+            <div class="container">
+              <div class="carousel-caption text-end">
+                <h1>Olive Land Farms.</h1>
+                <p>Una familia como el olivo.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div> <!-- fin .header carousel -->
+    <!-- inicio header menu-->
+    <div class="container shadow-lg p-4 mb-4 bg-white sticky-top">
+
+      <header
+        class="d-flex flex-wrap align-items-center justify-content-center  justify-content-md-between py-3 border-bottom">
+        <div class="col-md-4 mb-4 mb-md-0">
+          <img src="utls/imgs/logotipo.jpg" width="70" height="50" />
+          <span class="fs-4">Olive Land Farms</span>
+        </div>
+        <ul class="nav nav-pills" id="menuarriba">
+          <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Inicio</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+        </ul>
       </header>
-<!-- InstanceBeginEditable name="CentroEditRegion" -->
-  <div class="content">
-    <h1>Probando</h1>
-    <p>Tenga en cuenta que la CSS para estos diseños cuenta con numerosos comentarios. Si realiza la mayor parte de su trabajo en la vista Diseño, eche un vistazo al código para obtener sugerencias sobre cómo trabajar con la CSS para diseños flotantes. Puede quitar estos comentarios antes de lanzar el sitio. Para obtener más información sobre las técnicas usadas en estos diseños CSS, lea este artículo en el Centro de desarrolladores de Adobe: <a href="http://www.adobe.com/go/adc_css_layouts">http://www.adobe.com/go/adc_css_layouts</a>.</p>
-    <h2>Diseño</h2>
-    <p>Dado que éste es un diseño de una sola columna, el .content no flota. </p>
-    <h3>Sustitución de logotipo</h3>
-    <p>Se ha utilizado un marcador de posición de imagen en el .header de este diseño, en el que lo más probable es que desee colocar un logotipo. Se recomienda quitar el marcador de posición y reemplazarlo por su propio logotipo vinculado. </p>
-    <p> Tenga en cuenta que si utiliza el inspector de propiedades para navegar hasta la imagen de su logotipo empleando el campo Origen (en lugar de quitar y reemplazar el marcador de posición), deberá quitar el fondo en línea y mostrar las propiedades. Estos estilos en línea sólo se utilizan para hacer que el marcador de posición del logotipo aparezca en los navegadores para fines de demostración. </p>
-    <p>Para quitar los estilos en línea, asegúrese de que el panel Estilos CSS está configurado como Actual. Seleccione la imagen y, en la sección Propiedades del panel Estilos CSS, haga clic con el botón derecho del ratón y elimine las propiedades de visualización y de fondo. (Por supuesto que siempre podrá ir directamente al código y eliminar allí los estilos en línea de la imagen o el marcador de posición.)</p>
-    <!-- end .content -->
+    </div> <!-- InstanceBeginEditable name="CentroEditRegion" -->
+
+    <div class="content">
+      <div class="centro-info Oz">
+        <div class="dividiendo-grid" >
+          <div class="col-4 border info-red" data-ft="true">
+            <div class="biGQs _P fiohW tyUdl uuBRH">
+              Acerca de
+            </div>
+            <div class="" style="
+                    -webkit-line-clamp: 7;
+                    line-break: normal;
+                    cursor: pointer;
+                  ">
+              <div class="biGQs _P pZUbB KxBGd">
+                <span class="JguWG">“Olive Land Farms" es una finca con una extensión de 5 hectáreas (12,5 acres),
+                  enclavada en “8470” ReidRd, perteneciente al pequeño poblado de Hastings, al Norte del Estado de la
+                  Florida. Cuenta con diversas variedades de olivo cultivados por métodos ecológicos. Aquí podrás
+                  encontrar gran diversidad de plantas como palmas, cedro, pino, limonero, arce rojo, magnolias, encino
+                  entre otras, además puedes disfrutar de la presencia de animales, incluyendoel rakkún, conejos,
+                  ardillas, que adornan el paisaje. Esta finca es un rincón privilegiado en cuanto a belleza
+                  paisajística y protección medioambiental.
+                  ¡Anímate a visitarnos…No te lo pierdas!
+                </span>
+              </div>
+            </div>
+          </div>
+          <!-- fotos de la finca -->
+          <div class="col-7">
+          aqui es algo
+          </div>    
+
+          <!-- fin fotos de la finca -->
+        </div>
+      </div>
+
+    </div> <!-- end .content -->
+    <!-- InstanceEndEditable -->
+    <div class="footer ">
+      <div class="">
+        <div class="row ">
+          <span class="fs-3">Olive Land Farms © </span>
+        </div>
+        <div class="row ">
+          <span class="fs-5"> <!-- -->2024<!-- -->
+            Data Mining<!-- -->
+            <!-- -->Todos los derechos reservados.</span>
+        </div>
+      </div>
+
+      <!-- end .footer -->
+    </div>
+    <!-- end .container -->
   </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-    <p>Pie de página</p>
-  <!-- end .footer --></div>
-  <!-- end .container --></div>
 </body>
 <script type="text/javascript" src="utls/js/bootstrap.bundle.min.js"></script>
 
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+
+</html>
